# say_botel

./: .dockerignore  .env.dist  .gitignore  .pre-commit-config.yaml  Dockerfile  alembic.ini  go.mod  go.sum  grpc_build.txt  handlers.py  main.go  main.py  pyproject.toml  requirements.txt  requirements_local.txt
.github/workflows/: docker-image.yml
botel/: handlers.py  hanlder_filters.py
botel/dal/: chat.py  user.py
botel/db/: engine.py  models.py
botel/db/alembic/: env.py
botel/db/alembic/versions/: a526002cf4fb_delete_test_tables.py  c63b0c65eb9f_blogregistered_and_chat.py  e2ede90046b0_fix.py
botel/db/operations/: create.py
botel/grpc_gate/: client.py  server.py
botel/utils/: common.py  normalize.py  telegram.py
db/: alembic.ini  engine.py  models.py
db/alembic/: env.py  help.txt
db/alembic/versions/: a4ab8a2a7feb_init_publishhistory_table.py  b35dd4cb82d8_fix2.py  ed3d77797231_add_tutorial_model.py
db/operations/: create.py  engin.py
engin/: chat.go  consts.go  db.go
frame/: Initializer.go  handlers.go
grpc_gate/: helloworld_pb2_grpc.py  server.py
utils/: normalize.py
