[tool.poetry]
name = "say-botel"
version = "0.1.0"
description = "This serviece provides the telegram related stuff/behavior to other SayIf services"
license = "LGPL-3.0-or-later"
repository = "https://github.com/SayIfOrg/say_botel"
authors = ["Amir Khalife <eng.amir.bu@gmail.com>"]
packages = [{include = "botel"},{include = "main.py"}]

    [tool.poetry.dependencies]
    python = "~3.9 || ~3.10 || ~3.11"
    pyTelegramBotAPI = "~4.7.0"
    aiohttp = "*" # required by "pyTelegramBotAPI" async
    alembic = "~1.8.1"
    asyncpg = "~0.26"  # alternatively you can use psycopg3
    beautifulsoup4 = "~4.11"
    grpcio = "~1.50"
    grpcio-tools = "~1.50"
    sqlalchemy = "~1.4.40"
    # uncomment when it's commented in local.dependencies
    # sayif-protos = {git = "https://github.com/SayIfOrg/say_protos.git", subdirectory = "packages/python"}

    [tool.poetry.group.dev.dependencies]
    python-dotenv = "~1.0"

    [tool.poetry.group.local.dependencies]
    # change the relative path to fit your usecagse
    sayif-protos = {path = "../path-to-local-dependency/say_protos/packages/python", develop = true}

    [tool.poetry.extras]

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
